add date methods to HistoryService